[gd_scene load_steps=3 format=2]

[ext_resource path="res://ENEMY.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=2]

[node name="ENEMY" type="Spatial"]
script = ExtResource( 1 )

[node name="DEATH_AREA" type="Area" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="DEATH_AREA"]
transform = Transform( 0.7, 0, 0, 0, 0.1, 0, 0, 0, 0.7, 0, 1.1, 0 )
shape = SubResource( 2 )

[node name="HURT_AREA" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_layer = 0
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="HURT_AREA"]
transform = Transform( 1.1, 0, 0, 0, 1.025, 0, 0, 0, 1.1, 0, 0.925, 0 )
shape = SubResource( 2 )

[node name="CSGBox" type="CSGBox" parent="."]

[connection signal="body_entered" from="DEATH_AREA" to="." method="_stomped"]
[connection signal="body_entered" from="HURT_AREA" to="." method="hurt_player"]
